ext/mixed/css/display.css
/* ... */
/* Tags */
.tag {
    display: inline-block;
    padding: 0.2em 0.6em 0.3em;
    font-size: var(--tag-font-size);
    font-weight: var(--tag-font-weight);
    line-height: 1.25;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
    color: var(--tag-text-color);
    background-color: var(--tag-default-background-color);
    border: var(--tag-border-size) var(--tag-border-style) var(--tag-border-color);
    margin-right: 0.375em;
    cursor: pointer;
}
.tag[data-category=name] {
    background-color: var(--tag-name-background-color);
}
.tag[data-category=expression] {
    background-color: var(--tag-expression-background-color);
}
.tag[data-category=popular] {
    background-color: var(--tag-popular-background-color);
}
.tag[data-category=frequent] {
    background-color: var(--tag-frequent-background-color);
}
.tag[data-category=archaism] {
    background-color: var(--tag-archaism-background-color);
}
.tag[data-category=dictionary] {
    background-color: var(--tag-dictionary-background-color);
}
.tag[data-category=frequency] {
    background-color: var(--tag-frequency-background-color);
}
.tag[data-category=partOfSpeech] {
    background-color: var(--tag-part-of-speech-background-color);
}
.tag[data-category=search] {
    background-color: var(--tag-search-background-color);
}
.tag[data-category=pitch-accent-dictionary] {
    background-color: var(--tag-pitch-accent-dictionary-background-color);
}
.tag-inner {
    display: block;
}


/* Entries */
.entry {
    padding: var(--entry-vertical-padding) var(--entry-horizontal-padding);
    position: relative;
}
.kanji-link {
    border-bottom: var(--expression-thin-border-size) dashed var(--kanji-border-color);
    color: var(--kanji-text-color);
    text-decoration: none;
    cursor: pointer;
}
.term-expression-text-container {
    display: inline-block;
}
.term-expression-text {
    color: var(--kanji-text-color);
    font-size: var(--expression-font-size);
    display: inline-block;
    position: relative;
}
.entry[data-expression-multi=true] .term-expression[data-frequency=popular] .term-expression-text,
.entry[data-expression-multi=true] .term-expression[data-frequency=popular] .kanji-link {
    color: var(--kanji-popular-text-color);
}
.entry[data-expression-multi=true] .term-expression[data-frequency=rare] .term-expression-text,
.entry[data-expression-multi=true] .term-expression[data-frequency=rare] .kanji-link {
    color: var(--kanji-rare-text-color);
}
.term-expression-text>ruby>rt {
    color: var(--kanji-furigana-text-color);
}
.entry-header2,
.entry-header3 {
    display: inline;
}
.entry+.entry {
    border-top: var(--thin-border-size) solid var(--light-border-color);
}
.term-reasons {
    display: inline-block;
    color: var(--reason-text-color);
}
.term-reasons:empty {
    display: none;
}
.term-reasons>.term-reason+.term-reason-separator+.term-reason::before {
    content: ' \00AB  '; /* The two spaces is not a typo */
    white-space: pre-wrap;
    display: inline;
}
.term-expression-list {
    display: inline;
}
.term-expression {
    display: inline;
}
.term-expression-details {
    display: inline;
}
.term-expression-details>.tags {
    display: inline;
}
.term-expression-details>.frequencies {
    display: none;
}
.term-expression-list>.term-expression:not(:last-of-type)>.term-expression-text-container>.term-expression-text::after {
    content: '\3001';
}


/* Entry indicator */
.entry-current-indicator {
    display: block;
    position: absolute;
    left: calc(-1 * var(--main-content-horizontal-padding));
    top: 0;
    bottom: 0;
    width: 0;
    background-color: var(--entry-current-indicator-color);
    visibility: hidden;
    transition:
        width var(--entry-current-indicator-transition-duration) linear,
        visibility 0s linear var(--entry-current-indicator-transition-duration);
}
.entry.entry-current .entry-current-indicator {
    width: var(--entry-current-indicator-width);
    visibility: visible;
    transition:
        width var(--entry-current-indicator-transition-duration) linear,
        visibility 0s linear 0s;
}
:root[data-popup-current-indicator-mode=bar-right] .entry-current-indicator,
:root[data-popup-current-indicator-mode=dot-right] .entry-current-indicator {
    left: auto;
    right: 0;
}
.entry-current-indicator-inner {
    display: none;
    pointer-events: auto;
    width: 100%;
    height: 0;
    top: 0;
    background-color: var(--entry-current-indicator-color);
    transition: none;
}
.entry.entry-current .entry-current-indicator-inner {
    height: var(--entry-current-indicator-width);
    transition: height var(--entry-current-indicator-transition-duration) linear;
}
:root[data-popup-current-indicator-mode=dot-left] .entry-current-indicator,
:root[data-popup-current-indicator-mode=dot-right] .entry-current-indicator {
    background-color: transparent;
}
:root[data-popup-current-indicator-mode=dot-left] .entry-current-indicator-inner,
:root[data-popup-current-indicator-mode=dot-right] .entry-current-indicator-inner {
    display: block;
    position: sticky;
    transition: height var(--entry-current-indicator-transition-duration) linear;
}
:root[data-popup-current-indicator-mode=none] .entry-current-indicator,
:root[data-popup-current-indicator-mode=asterisk] .entry-current-indicator,
:root[data-popup-current-indicator-mode=triangle] .entry-current-indicator {
    display: none;
    transition: none;
}


/* Triangle entry indicator */
.term-expression-current-indicator {
    pointer-events: none;
    position: absolute;
    left: calc(-1 * var(--main-content-horizontal-padding));
    top: 0;
    bottom: 0;
    opacity: 0;
    visibility: hidden;
    transition:
        opacity var(--entry-current-indicator-transition-duration) linear,
        visibility 0s linear var(--entry-current-indicator-transition-duration);
}
/* ... */

